syntax = "proto3";

package tunnel.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "soft.structx.io/dino/protos/tunnel/v1";

service TunnelService {
  rpc CreateTunnel(CreateTunnelRequest) returns (CreateTunnelResponse) {}
  rpc GetTunnel(GetTunnelRequest) returns (GetTunnelResponse) {}
  rpc ListTunnels(ListTunnelsRequest) returns (ListTunnelsResponse) {}
  rpc UpdateTunnel(UpdateTunnelRequest) returns (UpdateTunnelResponse) {}
  rpc DeleteTunnel(DeleteTunnelRequest) returns (DeleteTunnelResponse) {}
}

message Tunnel {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message TunnelPartial {
  string name = 1;
}

message TunnelUpdate {
  string old_name = 1;
  string new_name = 2;
}

message CreateTunnelRequest {
  string tunnel_name = 1;
}

message CreateTunnelResponse {
  Tunnel tunnel = 1;
  oneof auth_details {
    string secret_key = 2;
  }
}

message GetTunnelRequest {
  string name = 1;
}

message GetTunnelResponse {
  Tunnel tunnel = 1;
}

message ListTunnelsRequest {
  int32 limit = 1;
  int32 offset = 2;
  bool to_complete = 3;
  string complete = 4;
}

message ListTunnelsResponse {
  repeated TunnelPartial tunnels = 1;
}

message UpdateTunnelRequest {
  TunnelUpdate tunnel_update = 1;
}

message UpdateTunnelResponse {
  Tunnel tunnel = 1;
}

message DeleteTunnelRequest {
  string name = 1;
}

message DeleteTunnelResponse {
  google.protobuf.Empty empty = 1;
}
